--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -20,15 +20,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>students</artifactId>
         <groupId>soap</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>students</artifactId>
+        <version>1.0</version>
     </parent>
 
-    <artifactId>students-web</artifactId>
+    <artifactId>rest-api</artifactId>
     <packaging>war</packaging>
 
-    <name>students: WAR Module</name>
+    <name>students: rest api WAR Module</name>
 
     <url>http://wildfly.org</url>
     <licenses>
@@ -44,7 +44,7 @@
         <!-- Dependency on the EJB module so we can use it's services if needed -->
         <dependency>
             <groupId>soap</groupId>
-            <artifactId>students-ejb</artifactId>
+            <artifactId>soap-api</artifactId>
             <type>ejb</type>
             <scope>provided</scope>
         </dependency>
