--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <name>students</name>
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>soap</groupId>
     <artifactId>students</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
 
     <url>http://wildfly.org</url>
@@ -32,10 +33,13 @@
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
         </license>
     </licenses>
+
     <modules>
-        <module>students-ejb</module>
-        <module>students-web</module>
+        <module>soap-api</module>
+        <module>soap-connector</module>
+        <module>rest-api</module>
         <module>students-ear</module>
+        <module>students-model</module>
     </modules>
 
     <properties>
@@ -73,7 +77,14 @@
                 to repeat ourselves in every module -->
             <dependency>
                 <groupId>soap</groupId>
-                <artifactId>students-ejb</artifactId>
+                <artifactId>soap-api</artifactId>
+                <version>${project.version}</version>
+                <type>ejb</type>
+            </dependency>
+
+            <dependency>
+                <groupId>soap</groupId>
+                <artifactId>students-model</artifactId>
                 <version>${project.version}</version>
                 <type>ejb</type>
             </dependency>
@@ -82,7 +93,7 @@
                 ourselves in every module -->
             <dependency>
                 <groupId>soap</groupId>
-                <artifactId>students-web</artifactId>
+                <artifactId>rest-api</artifactId>
                 <version>${project.version}</version>
                 <type>war</type>
                 <scope>compile</scope>
