--- a/soap-connector/pom.xml
+++ b/soap-connector/pom.xml
@@ -20,15 +20,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>students</artifactId>
         <groupId>soap</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <artifactId>students</artifactId>
+        <version>1.0</version>
     </parent>
 
-    <artifactId>students-ejb</artifactId>
+    <artifactId>soap-connector</artifactId>
     <packaging>ejb</packaging>
 
-    <name>students: EJB Module</name>
+    <name>student: soap-connector</name>
 
     <url>http://wildfly.org</url>
     <licenses>
@@ -41,8 +41,14 @@
 
     <dependencies>
 
-        <!-- Declare the APIs we depend on and need for compilation. All of 
+        <!-- Declare the APIs we depend on and need for compilation. All of
             them are provided by JBoss WildFly -->
+        <dependency>
+            <groupId>soap</groupId>
+            <artifactId>soap-api</artifactId>
+            <version>${project.version}</version>
+            <type>ejb</type>
+        </dependency>
 
         <!-- Import the EJB API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
@@ -83,7 +89,7 @@
         </dependency>
 
         <!-- Optional, but highly recommended -->
-        <!-- Arquillian allows you to test enterprise code such as EJBs and 
+        <!-- Arquillian allows you to test enterprise code such as EJBs and
             Transactional(JTA) JPA from JUnit/TestNG -->
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
@@ -96,7 +102,6 @@
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>jboss</groupId>
             <artifactId>jboss-annotations-ejb3</artifactId>
@@ -112,7 +117,11 @@
             <artifactId>jbossws-api</artifactId>
             <version>1.1.2.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
     </dependencies>
 
@@ -140,9 +149,9 @@
 
     <profiles>
         <profile>
-            <!-- The default profile skips all tests, though you can tune it 
+            <!-- The default profile skips all tests, though you can tune it
                 to run just unit tests based on a custom pattern -->
-            <!-- Seperate profiles are provided for running all tests, including 
+            <!-- Seperate profiles are provided for running all tests, including
                 Arquillian tests that execute in the specified container -->
             <id>default</id>
             <activation>
@@ -162,7 +171,7 @@
         </profile>
 
         <profile>
-            <!-- An optional Arquillian testing profile that executes tests 
+            <!-- An optional Arquillian testing profile that executes tests
                 in your WildFly instance -->
             <!-- This profile will start a new WildFly instance, and execute
                 the test, shutting it down when done -->
@@ -178,7 +187,7 @@
         </profile>
 
         <profile>
-            <!-- An optional Arquillian testing profile that executes tests 
+            <!-- An optional Arquillian testing profile that executes tests
                 in a remote WildFly instance -->
             <!-- Run with: mvn clean test -Parq-wildfly-remote -->
             <id>arq-wildfly-remote</id>
