--- a/pom.xml
+++ b/pom.xml
@@ -38,40 +38,46 @@
         <module>soap-api</module>
         <module>soap-connector</module>
         <module>rest-api</module>
-        <module>students-ear</module>
+        <module>rest-connector</module>
         <module>students-model</module>
+        <module>students-ear</module>
     </modules>
 
     <properties>
-        <!-- Explicitly declaring the source encoding eliminates the following 
-            message: -->
-        <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
-            resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <!-- JBoss dependency versions -->
-
         <version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
-
-        <!-- Define the version of the JBoss BOMs we want to import to specify tested stacks. -->
         <version.jboss.bom>8.2.1.Final</version.jboss.bom>
         <version.wildfly>9.0.0.Alpha1</version.wildfly>
 
-
-        <!-- other plugin versions -->
         <version.compiler.plugin>3.1</version.compiler.plugin>
         <version.ear.plugin>2.10</version.ear.plugin>
         <version.ejb.plugin>2.3</version.ejb.plugin>
         <version.surefire.plugin>2.16</version.surefire.plugin>
         <version.war.plugin>2.5</version.war.plugin>
 
-        <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>0.10.5</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>0.10.5</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>0.10.5</version>
+                <scope>runtime</scope>
+            </dependency>
 
             <!-- Define the version of the EJB jar so that we don't need 
                 to repeat ourselves in every module -->
@@ -89,8 +95,6 @@
                 <type>ejb</type>
             </dependency>
 
-            <!-- Define the version of the WAR so that we don't need to repeat 
-                ourselves in every module -->
             <dependency>
                 <groupId>soap</groupId>
                 <artifactId>rest-api</artifactId>
