--- a/rest-connector/pom.xml
+++ b/rest-connector/pom.xml
@@ -25,10 +25,10 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>soap-connector</artifactId>
+    <artifactId>rest-connector</artifactId>
     <packaging>ejb</packaging>
 
-    <name>students: soap-connector</name>
+    <name>students: rest-connector</name>
 
     <url>http://wildfly.org</url>
     <licenses>
@@ -41,13 +41,13 @@
 
     <dependencies>
 
-        <!-- Declare the APIs we depend on and need for compilation. All of
-            them are provided by JBoss WildFly -->
         <dependency>
             <groupId>soap</groupId>
-            <artifactId>soap-api</artifactId>
+            <artifactId>students-model</artifactId>
             <type>ejb</type>
         </dependency>
+        <!-- Declare the APIs we depend on and need for compilation. All of 
+            them are provided by JBoss WildFly -->
 
         <!-- Import the EJB API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
@@ -88,7 +88,7 @@
         </dependency>
 
         <!-- Optional, but highly recommended -->
-        <!-- Arquillian allows you to test enterprise code such as EJBs and
+        <!-- Arquillian allows you to test enterprise code such as EJBs and 
             Transactional(JTA) JPA from JUnit/TestNG -->
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
@@ -101,6 +101,7 @@
             <artifactId>arquillian-protocol-servlet</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>jboss</groupId>
             <artifactId>jboss-annotations-ejb3</artifactId>
@@ -144,9 +145,9 @@
 
     <profiles>
         <profile>
-            <!-- The default profile skips all tests, though you can tune it
+            <!-- The default profile skips all tests, though you can tune it 
                 to run just unit tests based on a custom pattern -->
-            <!-- Seperate profiles are provided for running all tests, including
+            <!-- Seperate profiles are provided for running all tests, including 
                 Arquillian tests that execute in the specified container -->
             <id>default</id>
             <activation>
@@ -166,7 +167,7 @@
         </profile>
 
         <profile>
-            <!-- An optional Arquillian testing profile that executes tests
+            <!-- An optional Arquillian testing profile that executes tests 
                 in your WildFly instance -->
             <!-- This profile will start a new WildFly instance, and execute
                 the test, shutting it down when done -->
@@ -182,7 +183,7 @@
         </profile>
 
         <profile>
-            <!-- An optional Arquillian testing profile that executes tests
+            <!-- An optional Arquillian testing profile that executes tests 
                 in a remote WildFly instance -->
             <!-- Run with: mvn clean test -Parq-wildfly-remote -->
             <id>arq-wildfly-remote</id>
