--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -67,6 +67,20 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>soap</groupId>
+            <artifactId>students-dao</artifactId>
+            <type>ejb</type>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>soap</groupId>
+            <artifactId>students-jpa</artifactId>
+            <type>ejb</type>
+            <scope>provided</scope>
+        </dependency>
+
 
         <!-- Import the JAX-RS API, we use provided scope as the API is included in JBoss WildFly -->
         <dependency>
